# domainradar-clf

./: README.md  example.py  pyproject.toml
classifiers/: Clf_decision_nn.py  Clf_deep_lstm_decision.py  Clf_dga_binary_lgbm.py  Clf_dga_binary_nn.py  Clf_dga_multiclass_lgbm.py  Clf_malware_cnn.py  Clf_malware_deep.py  Clf_malware_deepnn.py  Clf_malware_dns_nn.py  Clf_malware_geo_nn.py  Clf_malware_gru.py  Clf_malware_html_lgbm.py  Clf_malware_ip_nn.py  Clf_malware_lgbm.py  Clf_malware_rdap_nn.py  Clf_malware_residual.py  Clf_malware_xgboost.py  Clf_phishing_cnn.py  Clf_phishing_deepnn.py  Clf_phishing_dns_nn.py  Clf_phishing_geo_nn.py  Clf_phishing_html_lgbm.py  Clf_phishing_ip_nn.py  Clf_phishing_lgbm.py  Clf_phishing_rdap_nn.py  Clf_phishing_xgboost.py  feature_definition.py  feature_names_phishing.json  options.py  pipeline.py  preprocessor.py
classifiers/boundaries/: decision_nn_scaler.joblib  dga_binary_nn_scaler.save  malware_deepnn_scaler.joblib  malware_dns_nn_scaler.joblib  malware_geo_nn_scaler.joblib  malware_ip_nn_scaler.joblib  malware_outliers.joblib  malware_rdap_nn_scaler.joblib  malware_scaler.joblib  outliers_benign2312misp2402.joblib  phishing_cnn_scaler.joblib  phishing_deepnn_scaler.joblib  phishing_dns_nn_scaler.joblib  phishing_geo_nn_scaler.joblib  phishing_ip_nn_scaler.joblib  phishing_outliers.joblib  phishing_rdap_nn_scaler.joblib  phishing_scaler.joblib  phishing_scaler_prod.joblib  scaler_benign2312misp2402.joblib
classifiers/models/: decision_nn_model.keras  decision_tree_benign2312phishing2402.joblib  dga_binary_lgbm_model.joblib  dga_binary_nn_model.keras  malware_cnn_model_net.py  malware_cnn_model_state_dict.pth  malware_cnn_modelv2.pth  malware_decision_tree_model.joblib  malware_deep.pth  malware_deep_model.py  malware_dns_nn_model.keras  malware_geo_nn_model.keras  malware_gru.pth  malware_gru_model.py  malware_html_lgbm_model.joblib  malware_ip_nn_model.keras  malware_lgbm_model_nonndf.joblib  malware_rdap_nn_model.keras  malware_residual.pth  malware_residual_model.py  net.py  phishing-lgbm.pkl  phishing_cnn_model.pth  phishing_cnn_model_net.py  phishing_cnn_model_state_dict.pth  phishing_decision_tree_model.joblib  phishing_deepnn_model.keras  phishing_dns_nn_model.keras  phishing_geo_nn_model.keras  phishing_html_lgbm_model.joblib  (+5 more)
testdata/: 2405_clftest_benign_filtered_HTML.parquet  2405_clftest_malware_filtered_HTML.parquet  2405_clftest_phishing_filtered_HTML.parquet  other-dga-900.parquet  sample-test.parquet  validation.parquet  ver.parquet
tests/: dump_ndf_file.ipynb  pipeline-debug.ipynb  pipeline-test-clfeval.ipynb  pipeline-test-validation.ipynb  pipeline-test.ipynb  prepare_preliminary_results.ipynb
(+8 files in other folders)
