[tool.poetry]
name = "classifiers"
version = "0.1.0"
description = "ML Classification Pipeline for DomainRadar"
authors = [
    "Radek Hranicky <hranicky@fit.vut.cz>",
    "Jan Polisensky <xpolis04@stud.fit.vut.cz>",
    "Petr Pouc <xpoucp01@fit.vut.cz>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
scikit-learn = "^1.5.0"
sklearn-pandas = "^2.2.0"
tensorflow-io-gcs-filesystem = {version = ">=0.36.0", python = ">=3.11,<3.12"}
tensorflow-cpu = "~=2.15.0"
keras = "^2.15.0"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
pandas = ">=2.0.0"
numpy = ">=1.24.3"
python-math = "^0.0.1"
joblib = "^1.3.2"
dill = "^0.3.8"
shap = "~=0.45.1"
torch = {version = "^2.1.2", source = "pytorch_cpu"}

[tool.poetry.group.arrow]
optional = true

[tool.poetry.group.arrow.dependencies]
pyarrow = "^15.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
notebook = ">=6.5.4"
pymongoarrow = ">=0.7.0"
pyarrow = "^15.0.0"
scipy = "^1.12.0"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
